Usability fixes for autocomplete search box: enter should always submit even if suggestions are visible but none are selected, keep right edge of menu aligned with right edge of input box, use jQuery.placeholder for placeholder text, apply slightly different styles for placeholder state, and use throbber for 'loading suggestions' state
--HG--
extra : convert_revision : svn%3A60972f9f-2242-074b-9109-3933092f38a4/trunk%40648

--- a/stylesheets/default.css
+++ b/stylesheets/default.css
@@ -130,10 +130,17 @@ footer {
 #page_search input {
     background:url("/images/Search-icon.png") no-repeat scroll 2px 1px #FFFFFF;
     border:1px solid #DDDDDD;
-    color:grey;
     font-size:12px;
     padding:2px 2px 2px 18px;
     width: 20em;
+}
+
+#page_search input.placeholder {
+    color: #898989;
+}
+
+#page_search input.ui-autocomplete-loading {
+    background-image: url("/images/throbber.gif")
 }
 
 #page_social_links {
